# WendzelNNTPd

./: .gitignore  AUTHOR  AUTHORS  BUGS  CHANGELOG  CONTRIBUTING.md  FAQ.md  FAQ.txt  HISTORY  INSTALL  Makefile  Makefile.in  README.md  TODO  TODO_BEFORE_AND_AFTER_RELEASE  TODO_BEFORE_RELEASE  aclocal.m4  bad.posting  configure  configure.ac  create_certificate  create_certificate_raw  create_code_pkg.sh  openssl.cnf  re_create_db.sh  usenet.db_struct  wendzelnntpadm.8  wendzelnntpd.8  wendzelnntpd.conf  wendzelnntpd.conf_raw  wendzelnntpd_dev.conf
.github/workflows/: build-debian-package.yml  build-tests.yml  docker-ci.yml  gh-pages.yml  uats.yml
WendzelNNTPd-OSE/: AUTHOR  BUGS  CHANGELOG  CONTRIBUTE  FAQ.md  FAQ.txt  HISTORY  INSTALL  LICENSE  Makefile  Makefile.inc  README  TODO  TODO_BEFORE_RELEASE  WISHLIST  bad.posting  configure  create_code_pkg.sh  getver.sh  tiny_doc.txt  wendzelnntpd.conf
WendzelNNTPd-OSE/docs/: Makefile  configuration.tex  docs.tex  install.tex  intro.tex  running.tex  upgrade.tex
WendzelNNTPd-OSE/docs/docs/: docs.css  docs.html  footnode.html  index.html
WendzelNNTPd-OSE/src/: acl.c  cdpnntpadm.c  cdpstrings.c  charstack.c  config.l  config.y  database.c  db_abstraction.c  db_mysql.c  db_rawcheck.c  db_sqlite3.c  globals.c  hash.c  libcdpstrings_testmain.c  libfunc.c  log.c  main.c  server.c
WendzelNNTPd-OSE/src/include/: cdpstrings.h  main.h  wendzelnntpdpath.h
WendzelNNTPd-OSE_old_1.4.x/: CHANGELOG  CONTRIBUTE  FAQ.txt  HISTORY  INSTALL  LICENSE.txt  Makefile  Makefile.inc  Makefile.win  README  README_win32.txt  TODO  WISHLIST  WendzelNNTPd.dev  configure  create_code_pkg.sh  setup.nsi  start_daemon.bat  usenet.db  usenet.db_struct  usenet.db_struct_clear  wendzelnntpd.conf
WendzelNNTPd-OSE_old_1.4.x/gui/src/: Makefile  compile  compile.bat  gui.cpp  gui.h  src.pro
WendzelNNTPd-OSE_old_1.4.x/scripts/startup/: init.d_script
WendzelNNTPd-OSE_old_1.4.x/src/: cdpnntpadm.c  charstack.c  config.l  config.y  database.c  libcdpstrings_testmain.c  libfunc.c  log.c  main.c  server.c  w32trial.c  xml_out.c
WendzelNNTPd-OSE_old_1.4.x/src/include/: cdpstrings.h  main.h  wendzelnntpdpath.h
database/: mysql_db_struct.sql  postgres_db_struct.sql  usenet.db_struct_clear
docker/: Dockerfile  Dockerfile-Base  Dockerfile_Github  reflex.conf
docker/openssl/: openssl.cnf
docs/: .gitignore  Makefile  configuration.tex  convert-links.lua  create_certificate.8_raw  development.tex  docs.tex  install.tex  intro.tex  mkdocs.yml  running.tex  template.tex  upgrade.tex  wendzelnntpadm.8  wendzelnntpd.8  wendzelnntpd.conf.5_raw
docs/docs/: configuration.md  development.md  docs.html  footnode.html  index.html  index.md  install.md  running.md  uninstall.md  upgrade.md
gh-pages/: README.md
scripts/startup/: init.d_script_raw  wendzelnntpd.service_raw
src/: acl.c  cdpnntpadm.c  cdpstrings.c  charstack.c  config.l  config.y  database.c  db_abstraction.c  db_mysql.c  db_postgres.c  db_rawcheck.c  db_sqlite3.c  globals.c  gnutls.c  hash.c  libfunc.c  libssl.c  log.c  main.c  server.c  tls.c
src/include/: cdpstrings.h  main.h  wendzelnntpdpath.h
tests/: nntp-ssl-port-test.exp  nntp-starttls-test.exp
tls-tests/: README.md  ca-root.srl  create-certs.sh  nntp-mandatory-tls-test.exp  nntp-mutual-tls-fails-test.exp  nntp-mutual-tls-test.exp  nntp-starttls-test.exp  nntp-tls-port-test.exp  openssl-client.cnf  openssl.cnf  test-posting.txt  wendzelnntpd-mandatory-tls.conf  wendzelnntpd-mutual-tls.conf
unittesting/: README.md  bad.posting  create-client-cert.sh  create_db_test_data.sql  initialize_db.sh  posting.1  posting.11  posting.3  posting.4  posting.5  posting.6  posting.8  posting.9  run.sh  test_dockerimage.sh  test_wendzelnntpadm.sh
unittesting/manual/: README.md  posting.1  posting.10  posting.2  posting.7
unittesting/test-files/: cdp1@localhost  cdp2@localhost  openssl.cnf  test-posting.txt  wendzelnntpd.conf
unittesting/tests/: nntp-article-test.exp  nntp-authinfo-test.exp  nntp-body-test.exp  nntp-capabilities-test.exp  nntp-date-test.exp  nntp-group-test.exp  nntp-head-test.exp  nntp-help-test.exp  nntp-initial-connection-test.exp  nntp-list-newsgroups-test.exp  nntp-list-overview.fmt-test.exp  nntp-list-test.exp  nntp-listgroup-test.exp  nntp-mode-reader-test.exp  nntp-mutual-tls-fails-test.exp  nntp-mutual-tls-test.exp  nntp-post-test.exp  nntp-quit-test.exp  nntp-starttls-test.exp  nntp-stat-test.exp  nntp-tls-port-test.exp  nntp-xgtitle-test.exp  nntp-xhdr-test.exp  nntp-xover-test.exp
unittesting/tls-testing/: Dockerfile  README  README.md  create-client-cert.sh  create_db_test_data.sql  initialize_db.sh  nntp-mutual-tls-fails-test.exp  nntp-mutual-tls-test.exp  nntp-starttls-test.exp  nntp-tls-port-test.exp  run.sh
user-acceptance-test/: nntp_thunderbird.py  snntp_thunderbird.py  test.py
web/: index.md
(+22 files in other folders)
